replace test project, start to write tasks

--- a/WebApp/appsettings.Development.json
+++ b/WebApp/appsettings.Development.json
@@ -2,13 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "IdentityServer": {
-    "Key": {
-      "Type": "Development"
+      "Microsoft.AspNetCore": "Warning"
     }
   }
 }
