--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,21 +1,9 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared",
-    "SqlServerConnection": ""
-  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-  "IdentityServer": {
-    "Clients": {
-      "WebApp": {
-        "Profile": "IdentityServerSPA"
-      }
+      "Microsoft.AspNetCore": "Warning"
     }
   },
-"AllowedHosts": "*"
+  "AllowedHosts": "*"
 }
